[package]
name = "newsapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.79"
serde = {version = "1.0.136", features = ["derive"] }
ureq = { version = "2.1.1", features = ["json"] }
thiserror = "1.0.30"
url = "2.2.2"
reqwest = { version = "0.11.4", features = ["json"], optional = true }

[features]
async = [
      "reqwest"
]
